...
            />
          </View>

          <TouchableOpacity
            style={styles.toggleAuth}
            onPress={toggleAuthMode}
            testID="login_screen.signup_link"
          >
            <Text style={styles.toggleAuthText}>
              {isLogin ? "Don't have an account? " : "Already have an account? "}
              <Text style={styles.toggleAuthTextHighlight}>
                {isLogin ? 'Sign Up' : 'Log In'}
              </Text>
...
